[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
default-run = "day3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
itertools = "0.12.0"

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
